<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="asiste.incode.Login">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colorTextButton"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/usericon"

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:background="@drawable/user" />

                <EditText
                    android:id="@+id/usuario"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:gravity="start"
                    android:textAlignment="textStart"
                    android:hint="@string/usuario"
                    android:inputType="text"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorTextButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/passwordicon"

                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:background="@drawable/password_icon" />

                <EditText
                    android:id="@+id/contraseña"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/contrasena"
                    android:inputType="textPassword"
                    android:textAlignment="textStart"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorTextButton" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:onClick="login"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/list_grad"
                android:text="@string/inicioSesion"
                android:textColor="@color/colorTextButton" />
            <Button
                android:id="@+id/btnresgister"

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@color/backgroundColor"
                android:fontFamily="sans-serif"
                android:text="¿No tienes cuenta? Registrate"
                android:textColor="@color/colorTextButton" />

        </LinearLayout>

    </FrameLayout>

</FrameLayout>
